--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.121.1",
+    "pypdf>=6.2.0",
     "youtube-transcript-api>=1.2.3",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
