--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "get-grok": "uvx huggingface-cli download xai-org/grok-2 --local-dir ./models/grok-2",
+    "build-slang": "docker build -t grok2-sglang:fp8-tp8 .",
+    "run-slang": "docker run -v ./models/grok-2:/local/grok-2:ro grok2-sglang:fp8-tp8"
   },
   "author": "HDTHREE",
   "dependencies": {
