--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "httpx>=0.28.1",
+    "lazy-loader>=0.4",
     "pypdf>=6.2.0",
     "python-dotenv>=1.2.1",
     "sqlmodel>=0.0.27",
@@ -26,6 +27,7 @@ frontend = [
 ]
 dev = [
     "ruff>=0.14.5",
+    "livetrivia[backend,frontend]",
 ]
 
 [build-system]
