moved some scripts around

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "xo --fix && uvx ruff check && uvx ruff format",
     "get-grok": "uvx huggingface-cli download xai-org/grok-2 --local-dir ./models/grok-2",
     "build-slang": "docker build -t grok2-sglang:fp8-tp8 .",
-    "run-slang": "docker run -p 4084:4084 -v ./models/grok-2:/local/grok-2:ro grok2-sglang:fp8-tp8",
-    "dev-api": "./api.py",
-    "dev-app": "./app.py"
+    "spawn-slang": "docker run -p 4084:4084 -v ./models/grok-2:/local/grok-2:ro grok2-sglang:fp8-tp8",
+    "spawn-sqlite": "./scripts/sqlite.sh",
+    "spawn-store": "./scripts/store.sh",
+    "dev-api": "./scripts/api.py",
+    "dev-app": "./scripts/app.py"
   },
   "author": "HDTHREE",
   "dependencies": {
