--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "webpack serve",
     "build": "webpack --mode production",
     "lint": "xo --fix && uvx ruff check && uvx ruff format",
-    "get-grok": "uvx huggingface-cli download xai-org/grok-2 --local-dir ./models/grok-2",
-    "build-slang": "docker build -t grok2-sglang:fp8-tp8 .",
-    "spawn-slang": "docker run -p 4084:4084 -v ./models/grok-2:/local/grok-2:ro grok2-sglang:fp8-tp8",
+    "get-mistral": "mkdir -p models/mistral-7b && uvx huggingface-cli download mistralai/Mistral-7B-Instruct-v0.3 --local-dir ./models/mistral-7b",
+    "build-slang": "docker build -f Dockerfile.sglang -t mistral-7b-sglang:fp8-tp8 .",
+    "spawn-slang": "docker run -p 30000:4084 -v ./models/mistral-7b:/local/mistral-7b:ro --gpus all --shm-size=1g mistral-7b-sglang:fp8-tp8",
     "spawn-sqlite": "./scripts/sqlite.sh",
     "spawn-store": "./scripts/store.sh",
     "dev-api": "./scripts/api.py",
