--- a/.dev.env
+++ b/.dev.env
@@ -1,3 +1,3 @@
 SGLANG_URL=http://localhost:4084/generate
-SQLITE_URL=http://localhost:4084/generate
+SQLITE_URL=sqlite+aiosqlite:///my_database.db
 
