--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ backend = [
     "aiosqlite>=0.22.1",
     "bcrypt>=5.0.0",
     "pydantic[email]>=2.12.4",
+    "pyjwt>=2.10.1",
 ]
 frontend = [
     "dash-ag-grid>=32.3.2",
@@ -33,6 +34,7 @@ frontend = [
 dev = [
     "ruff>=0.14.5",
     "pytest>=9.0.2",
+    "pandas>=3.0.0",
     "livetrivia[backend,frontend]",
     "uvicorn>=0.38.0",
 ]
